hphp/test/zend/bad/ext/standard/tests/general_functions/getopt_005.php
<?php
	var_dump(getopt("a:", array("arg:")));
?>